--- a/src/main/resources/templates/detail.html
+++ b/src/main/resources/templates/detail.html
@@ -39,7 +39,7 @@
     const listReq = () => {
         console.log("목록 요청");
         const page = [[${page}]];
-        location.href = "/board/";
+        location.href = "/board/paging?page="+page;
     }
     const updateReq = () => {
         console.log("수정 요청");
