--- a/src/main/resources/templates/save.html
+++ b/src/main/resources/templates/save.html
@@ -7,6 +7,7 @@
 <body>
 <!-- front 부분은 되도록이면 복사 붙여넣기 해주세요 -->
 <!-- action속성: 목적지(서버주소), method속성: http request method(get, post) -->
+<!-- enctype="multipart/form-data" - 파일이 포함된 폼(모든 문자를 인코딩하지 않음) -->
 <form action="/board/save" method="post" enctype="multipart/form-data">
     writer: <input type="text" name="boardWriter"> <br>
     pass: <input type="text" name="boardPass"> <br>
