오류수정 (boardFile 리스트가 비워져있지 않음) post로 save받을때 redirect처리

--- a/src/main/resources/templates/detail.html
+++ b/src/main/resources/templates/detail.html
@@ -35,7 +35,8 @@
     <tr th:if="${board.fileAttached == 1}">
         <th>image</th>
         <td th:each="fileName: ${board.storedFileName}">
-            <img th:src="@{|/upload/${fileName}|}" alt=""></td>
+            <img th:src="@{|/upload/${fileName}|}" alt="">
+        </td>
     </tr>
 </table>
 <button onclick="listReq()">목록</button>
