--- a/src/main/resources/templates/save.html
+++ b/src/main/resources/templates/save.html
@@ -5,7 +5,6 @@
     <title>save</title>
 </head>
 <body>
-<!-- front 부분은 되도록이면 복사 붙여넣기 해주세요 -->
 <!-- action속성: 목적지(서버주소), method속성: http request method(get, post) -->
 <!-- enctype="multipart/form-data" - 파일이 포함된 폼(모든 문자를 인코딩하지 않음) -->
 <form action="/board/save" method="post" enctype="multipart/form-data">
@@ -13,8 +12,23 @@
     pass: <input type="text" name="boardPass"> <br>
     title: <input type="text" name="boardTitle"> <br>
     contents: <textarea name="boardContents" cols="30" rows="10"></textarea> <br>
-    file: <input type="file" name="boardFile" multiple> <br>
+    file: <input type="file" id="boardFile" name="boardFile" multiple> <br>
+    <input type="button" value="파일 확인" onclick="checkFiles()">
     <input type="submit" value="글작성">
 </form>
+<script>
+    function checkFiles() {
+        // alert(document.getElementById('boardFile'));
+
+        const filesInput = document.getElementById('boardFile');
+        const files = filesInput.files;
+
+        if (files.length === 0) {
+            alert("파일이 첨부되지 않았습니다.");
+        } else {
+            alert(`첨부된 파일의 개수: ${files.length}`);
+        }
+    }
+</script>
 </body>
 </html>
