--- a/src/main/resources/templates/paging.html
+++ b/src/main/resources/templates/paging.html
@@ -33,9 +33,9 @@
 <!-- 페이지 번호 링크(현재 페이지는 숫자만) for문
         for(int page=startPage; page<=endPage; page++)-->
 <span th:each="page: ${#numbers.sequence(startPage, endPage)}">
-<!-- 현재 보고있는 페이지는 링크 없이 숫자만 -->
+    <!-- 현재페이지는 링크X -->
     <span th:if="${page == boardList.number + 1}" th:text="${page}"></span>
-    <!-- 현재페이지 번호가 아닌 다른 페이지번호에는 링크를 보여줌 -->
+    <!-- 현재페이지가 아니면 링크O -->
     <span th:unless="${page == boardList.number + 1}">
         <a th:href="@{/board/paging(page=${page})}" th:text="${page}"></a>
     </span>
