--- a/src/main/resources/templates/paging.html
+++ b/src/main/resources/templates/paging.html
@@ -5,6 +5,7 @@
     <title>Title</title>
 </head>
 <body>
+<!-- 글작성 버튼 클릭 시 saveReq 함수 실행 -->
 <button onclick="saveReq()">글작성</button>
 
 <table>
@@ -15,43 +16,53 @@
         <th>date</th>
         <th>hits</th>
     </tr>
+    <!-- boardList를 순회하며 각 게시글을 표시 -->
     <tr th:each="board: ${boardList}">
         <td th:text="${board.id}"></td>
+        <!-- 게시글 제목을 클릭 시 해당 게시글 상세 페이지로 이동, 페이징 처리 -->
         <td><a th:href="@{|/board/${board.id}|(page=${boardList.number + 1})}" th:text="${board.boardTitle}"></a></td>
         <td th:text="${board.boardWriter}"></td>
+        <!-- 게시글 작성 시간은 'yyyy-MM-dd HH:mm:ss' 형식으로 출력 -->
         <td th:text="*{#temporals.format(board.boardCreatedTime, 'yyyy-MM-dd HH:mm:ss')}"></td>
         <td th:text="${board.boardHits}"></td>
     </tr>
 </table>
-<!-- 첫번째 페이지로 이동 -->
-<!-- /board/paging?page=1 , thymeleaf 문법-->
+
+<!-- 1 << 55 56 57 >> 1000 -->
+
+<!-- 첫번째 페이지로 링크 (1) -->
+<!-- /board/paging?page=1으로 이동 -->
 <a th:href="@{/board/paging(page=1)}">First</a>
-<!-- 이전 링크 활성화 비활성화 -->
-<!-- boardList.getNumber() 사용자:2페이지 getNumber()=1 -->
+
+<!-- 이전 페이지로 가는 링크 (<<) -->
+<!-- boardList.getNumber()는 현재 페이지 번호, 1-based index -->
+<!-- 만약 1 페이지라면 '#'로 링크 비활성화 -->
 <a th:href="${boardList.first} ? '#' : @{/board/paging(page=${boardList.number})}">prev</a>
 
-<!-- 페이지 번호 링크(현재 페이지는 숫자만) for문
-        for(int page=startPage; page<=endPage; page++)-->
+<!-- (55 56 57) -->
 <span th:each="page: ${#numbers.sequence(startPage, endPage)}">
-    <!-- 현재페이지는 링크X -->
+    <!-- 현재 페이지일 경우 숫자만 표시 -->
     <span th:if="${page == boardList.number + 1}" th:text="${page}"></span>
-    <!-- 현재페이지가 아니면 링크O -->
+    <!-- 현재 페이지가 아니면 해당 페이지로 이동할 수 있는 링크 제공 -->
     <span th:unless="${page == boardList.number + 1}">
         <a th:href="@{/board/paging(page=${page})}" th:text="${page}"></a>
     </span>
 </span>
 
-<!-- 다음 링크 활성화 비활성화
-    사용자: 2페이지, getNumber: 1, 3페이지-->
+<!-- 다음 페이지로 가는 링크 (>>) -->
+<!-- 만약 마지막 페이지라면 '#'로 링크 비활성화 -->
 <a th:href="${boardList.last} ? '#' : @{/board/paging(page=${boardList.number + 2})}">next</a>
-<!-- 마지막 페이지로 이동 -->
+
+<!-- 마지막 페이지 링크 (1000)-->
 <a th:href="@{/board/paging(page=${boardList.totalPages})}">Last</a>
 
 </body>
+
 <script>
     const saveReq = () => {
+        // '글작성' 버튼 클릭 시 /board/save 페이지로 이동
         location.href = "/board/save";
     }
-
 </script>
+
 </html>
