feat: Spring Security 기반 로그인/회원가입 기능 및 인증/인가 설정 적용
- 로그인/회원가입 Form 구성 및 처리 로직 구현
- 인증 설정: UserDetailService, PasswordEncoder, AuthenticationManager
- 인가 설정: 로그인하지 않은 사용자는 모든 요청 차단

--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -5,6 +5,8 @@
     <title>list</title>
 </head>
 <body>
+<button type="button" class="btn btn-secondary" onclick="location.href='/logout'">로그아웃</button>
+
 <table>
     <tr>
         <th>id</th>
@@ -24,5 +26,7 @@
         <td th:text="${board.boardHits}"></td>
     </tr>
 </table>
+<script src="/static/js/article.js"></script>
+
 </body>
 </html>
