bug: 요청 전용 DTO로 BoardRequestDTO 분리 및 바인딩 오류 해결
- BoardDTO를 BoardRequestDTO로 리네이밍하여 요청 DTO 역할 명확화
- final 제거 및 @NoArgsConstructor + @Setter 적용으로 Spring 바인딩 가능하도록 수정
- builder 제거: 요청용 DTO에서는 생성자 조립보다 자동 바인딩이 우선되므로 필요 없음
- 게시글 등록 시 IllegalStateException 해결

--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -16,7 +16,7 @@
         <th>date</th>
         <th>hits</th>
     </tr>
-<!--    BoardController의 findAll에서 받아옴. boardList는 BoardDTO리스트고 board는 BoardDTO-->
+    <!--    BoardController의 findAll에서 받아옴. boardList는 BoardRequestDTO리스트고 board는 BoardRequestDTO-->
     <tr th:each="board: ${boardList}">
         <td th:text="${board.id}"></td>
         <td><a th:href="@{|/board/${board.id}|}" th:text="${board.boardTitle}"></a></td>
