feat: implement cursor paging functionality and update related services #9
- BoardRepository: 커서 페이징을 위한 JPQL 및 네이티브 쿼리 메서드 추가
- BoardService: getBoardsByCursor 메서드 구현, 기존 save 메서드 리팩토링 및 테스트 코드 작성
- BoardMapper: 여러 페이징 방식에서 공통으로 사용할 수 있도록 Entity → DTO 매핑 로직 일반화
- BoardSummaryDTO → BoardPageResponse: 이름을 BoardPageResponse로 변경하여 "공통 페이징 응답 DTO"라는 목적을 더 명확하게 표현
- cursor-paging.html, index.html: 커서 페이징을 위한 화면 구성 및 버튼 추가

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,7 +8,8 @@
     <button onclick="saveReq()">글작성</button>
     <a href="/board/save">글작성(링크)</a>
     <button onclick="listReq()">글목록</button>
-    <button onclick="pagingReq()">페이징목록</button>
+    <button onclick="offsetPagingReq()">Offset-페이징목록</button>
+    <button onclick="cursorPagingReq()">Cursor-페이징목록</button>
 </body>
 <script>
     //  function saveReq() {
@@ -21,8 +22,11 @@
     const listReq = () => {
         location.href = "/board/";
     }
-    const pagingReq = () => {
+    const offsetPagingReq = () => {
         location.href = "/board/paging";
+    }
+    const cursorPagingReq = () => {
+        location.href = "/board/cursor-paging";
     }
 
 </script>
